UPDATES ProjectIssues and ProjectList components; replaces owner prop with currentUser for better clarity, adds projectOwner prop for conditional rendering, and enhances issue button styling for improved visibility.

--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -23,7 +23,7 @@ span {
 }
 .issueButton {
    
-    background-color: #7195b9;
+    background-color: #8da2b8;
     border: 1px solid #dadadf;
     border-radius: 2px;
     padding: .5rem 1rem;
